fix: 解决秒杀模块读取数据库优惠券时,类型转化异常